# otus_hw7_bulk

./: CMakeLists.txt  bulk.cpp  bulk.h  index.html  main.cpp  test.cpp
.github/workflows /: release.yml
